fix gaps

--- a/src/app/sections/search-claims/search-claims.component.scss
+++ b/src/app/sections/search-claims/search-claims.component.scss
@@ -1,3 +1,3 @@
 .search-claims-container {
-    margin: 24px;
+    margin: 32px 24px 24px;
 }
